# FolioMind

./: .swiftlint.yml  AGENTS.md  APPGROUP_SETUP.md  ExportOptions.plist
Docs/: AUTHENTICATION_SETUP.md  AudioFeaturesUserGuide.md  AudioImprovementsSummary.md  IMPLEMENTATION_SUMMARY.md  INTERNATIONALIZATION_PLAN.md  LIBSQL_VECTOR_INTEGRATION.md  PRIVACY_SETUP.md  ProductSpec.md  SPEA.md  (+11 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  LOGGING_IMPLEMENTATION.md  QUICK_START.md  README.md  UPLOAD_ENDPOINTS.md  docker-compose.yml  main.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  classification.py  extraction.py  health.py  upload.py
backend/app/core/: config.py
backend/app/core/detectors/: __init__.py  bill.py  credit_card.py  insurance.py  letter.py  promotional.py  receipt.py
backend/app/models/: __init__.py  document.py  requests.py  responses.py  upload.py
backend/app/services/: __init__.py  classification_service.py  extraction_service.py  ocr_service.py  transcription_service.py
backend/app/services/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  openai_provider.py
backend/docs/: CLASSIFICATION_STRATEGY.md
backend/examples/: README_UPLOADS.md  UPLOAD_EXAMPLES.md  generate_sample_receipt.py  test_api_examples.py  test_upload_endpoints.py  upload_media_test.py
backend/scripts/: README.md  test_upload.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_classification.py
(+74 files in other folders)
